hphp/hack/test/typecheck/imports_toplevel_strict.php.exp
File "imports_toplevel_strict.php", line 2, characters 1-45:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "imports_toplevel_strict.php", line 3, characters 1-44:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "imports_toplevel_strict.php", line 4, characters 1-19:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "imports_toplevel_strict.php", line 5, characters 1-19:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
